[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.3.0"                                     # helps manage buffers
regex = "1.11.1"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
tracing = "0.1"
tracing-subscriber = "0.3"
